--- a/nuxt-shadcn-template/components.json
+++ b/nuxt-shadcn-template/components.json
@@ -4,7 +4,7 @@
   "typescript": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "assets/css/tailwind.css",
+    "css": "./src/styles/tailwind.css",
     "baseColor": "slate",
     "cssVariables": false
   },
